Text should overflow when list item height set to 0 https://bugs.webkit.org/show_bug.cgi?id=78726

Reviewed by Julien Chaffraix.

Source/WebCore:

Tests: css2.1/20110323/height-applies-to-010a-expected.html
       fast/css/heightless-list-item-expected.html
       fast/css/heightless-list-item.html

* rendering/RenderListItem.cpp:
(WebCore::RenderListItem::paint):
   If the list item has height:0, only paint it if the list item allows any block or inline content
   to overflow unclipped. The zero-height check is a shortcut to avoid unnecessary painting and
   this seems to be the only case where there's something to do.

LayoutTests:

* css2.1/20110323/height-applies-to-010a-expected.html: Added.
* css2.1/20110323/height-applies-to-010a.htm: Added.
* fast/css/heightless-list-item-expected.html: Added.
* fast/css/heightless-list-item.html: Added.

Canonical link: https://commits.webkit.org/99247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111755 268f45cc-cd09-0410-ab3c-d52691b4dbfc